--- a/project/fitness.html
+++ b/project/fitness.html
@@ -18,7 +18,7 @@
 			<img width="5%" src="f.png" alt="">
 			<h2> Free N Fit</h2>
 			<ul>
-				<a href="fitness.html"><li>FITNESS</li></a>
+				<a href="fitness.html , _blank"><li>FITNESS</li></a>
 				<a href=""><li>CARE</li></a>
 				<a href=""><li>MIND</li></a>
 				<a href=""><li>STORE</li></a>
@@ -26,7 +26,7 @@
 				<a href="#lg"><li>Get App</li></a>
 				
 				<a href=""><li><i class="fa-solid fa-user"></i></i></li></a>
-				<a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+				<a href="cart.html"_blank><i class="fa-solid fa-cart-shopping"></i></a>
 			</ul>
 			
 		</nav>
