--- a/project/fitness.html
+++ b/project/fitness.html
@@ -19,13 +19,13 @@
 			<h2> Free N Fit</h2>
 			<ul>
 				<a href="fitness.html , _blank"><li>FITNESS</li></a>
-				<a href=""><li>CARE</li></a>
+				<a href="care.html"_blank><li>CARE</li></a>
 				<a href=""><li>MIND</li></a>
 				<a href=""><li>STORE</li></a>
 				<a href=""><li><i class="fa-solid fa-location-dot"></i> </li></a>
 				<a href="#lg"><li>Get App</li></a>
 				
-				<a href=""><li><i class="fa-solid fa-user"></i></i></li></a>
+				<a href="login.html"><li><i class="fa-solid fa-user"></i></i></li></a>
 				<a href="cart.html"_blank><i class="fa-solid fa-cart-shopping"></i></a>
 			</ul>
 			
