--- a/project/index.html
+++ b/project/index.html
@@ -23,7 +23,7 @@
 				<a href="fitness.html">
 					<li>FITNESS</li>
 				</a>
-				<a href="">
+				<a href="care.html"_blank>
 					<li>CARE</li>
 				</a>
 				<a href="">
